<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTopBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_trash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_article_create_title"
            android:textColor="?colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/svContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clTopBar"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvArticleType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/fragment_create_article_type_header"
                android:textColor="?colorOnSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/fmArticleTypeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/customborder_gray"
                app:layout_constraintTop_toBottomOf="@id/tvArticleType" />

            <TextView
                android:id="@+id/tvDiscipline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/fragment_create_discipline_header"
                android:textColor="?colorOnSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/fmArticleTypeContainer" />

            <FrameLayout
                android:id="@+id/fmDisciplineContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/customborder_gray"
                app:layout_constraintTop_toBottomOf="@id/tvDiscipline" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/customborder_gray"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/fmDisciplineContainer">

                <TextView
                    android:id="@+id/tvTitleArticle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_create_title_header"
                    android:textColor="?colorOnSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/acetTitleArticle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/fragment_create_title_hint"
                    android:scrollbars="vertical"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleArticle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clPreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/customborder_gray"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/clTitle">

                <TextView
                    android:id="@+id/tvPreviewHeaderArticle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_create_preview_header"
                    android:textColor="?colorOnSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/acetPreviewArticle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/fragment_create_preview_hint"
                    android:scrollbars="vertical"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvPreviewHeaderArticle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/customborder_gray"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/clPreview">

                <TextView
                    android:id="@+id/tvFileAndText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_create_file_header"
                    android:textColor="?colorOnSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/acetTextArticle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/fragment_create_text_hint"
                    android:scrollbars="vertical"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvFileAndText" />

                <TextView
                    android:id="@+id/tvPickPdfFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/fragment_create_pick_file"
                    android:textColor="?colorOnPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/acetTextArticle" />

                <TextView
                    android:id="@+id/tvDeletePdfFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/fragment_create_delete_pick_file"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/acetTextArticle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.kusu.loadingbutton.LoadingButton
                android:id="@+id/btnCreateArticle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="8dp"
                android:text="@string/fragment_create_article_btn"
                android:textColor="?colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clFile"
                app:lb_buttonColor="?colorOnPrimary"
                app:lb_isShadowEnable="false"
                app:lb_loaderColor="?colorPrimary" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>