<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAuth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">


        <TextView
            android:id="@+id/tvNameUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/fragment_profile_user_name_hint"
            android:textColor="?colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNameUser"
            style="@style/InputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvNameUser">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietNameUser"
                style="@style/InputEditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textCursorDrawable="@drawable/black_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fragment_profile_password_user_hint"
            android:textColor="?colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tilNameUser" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassUser"
            style="@style/InputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvPassUser">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassUser"
                style="@style/InputEditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/black_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fragment_profile_forgot_pass"
            android:textColor="?colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tilPassUser" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingVertical="11dp"
            android:stateListAnimator="@null"
            android:text="@string/fragment_profile_register"
            android:textColor="?colorOnPrimary"
            app:backgroundTint="?colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:strokeColor="?colorOnPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:paddingVertical="11dp"
            android:stateListAnimator="@null"
            android:text="@string/fragment_profile_login"
            android:textColor="?colorPrimary"
            app:backgroundTint="?colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>